# mindfully-mad

./: README.md  calc.grammar  calc.src  lips_minimal_rebuild  meson.build  meson_options.txt  remindfullymad.asm  val
grammar/: lips.grammar  lips.minimal.grammar  test.error.grammar
include/: inutility.h  mfm.h  mfmlexer.h  mfmparser.c  mfmrecom.h  mfmrevm.h
include/auror/: archive.h  aur.h  auror.h  config.h  database.h  download.h  ini.h  inutility.h  jobs.h  pacman.h  pkgdesc.h  powerpellets.h  status.h  transaction.h  www.h
include/lips/: ast.h  builtingram.h  bytecode.h  ccompiler.h  debug.h  vm.h
include/notstd/: cahash.h  compiler.h  core.h  debug.h  dict.h  error.h  field.h  futex.h  fzs.h  hashalg.h  json.h  list.h  mathmacro.h  memory.h  mth.h  opt.h  phq.h  rbtree.h  regex.h  regexerr.h  request.h  rhhash.h  ringbuffer.h  str.h  threads.h  tig.h  trie.h  type.h  utf8.h  xmacro.h
notstd/: core.c  delay.c  err.c  extras.c  futex.c  fzs.c  json.c  math.c  memory.c  opt.c  rbtree.c  rbuffer.c  regex.c  request.c  str.c  threads.c  tig.c  utf8.c
src/: inutility.c  lexer.c  liblips.c  lips.c  lipsAst.c  lipsBuiltinEmit.c  lipsByecode.c  lipsCcompiler.c  lipsDebug.c  lipsGram.c  lipsGrammarNameEnum.h  lipsVm.c  lips_hardcoded.h  mbi.c  mfm.c  reast.c  recom.c  regram.c  replace.c  revm.c
